syntax = "proto3";

package riven.vfs.v1;

/**
 * gRPC service for VFS media streaming with server-side streaming support
 * Shared between Rust daemon and Node.js backend
 */
service RivenVFSService {
  // Stream file data with configurable chunk size
  // Supports header/footer retrieval and continuous streaming
  rpc StreamFile(StreamFileRequest) returns (stream StreamFileResponse);

  // Bidirectional stream for catalog updates
  // Daemon subscribes to receive hot file updates from server
  // Server broadcasts file additions/removals/updates in real-time
  rpc WatchCatalog(stream WatchCatalogRequest) returns (stream WatchCatalogResponse);
}

/**
 * Request to stream file data
 * Can be used for:
 * - Entire file: offset=0, length=0 (means read to EOF)
 * - Header: offset=0, length=header_size (e.g., first 1MB)
 * - Footer: offset=file_size-footer_size, length=footer_size
 * - Range: offset=X, length=Y (standard Range request)
 */
message StreamFileRequest {
  // URL of the file to stream
  string url = 1;

  // Byte offset to start reading from
  uint64 offset = 2;

  // Number of bytes to read (0 = read to EOF)
  uint64 length = 3;

  // Size of each chunk to send in stream (default: 1MB)
  // Useful for tuning memory vs network trade-off
  uint32 chunk_size = 4;

  // Optional: timeout for the entire stream (seconds)
  uint32 timeout_seconds = 5;
}

/**
 * File data chunk - sent as part of stream
 * Multiple chunks make up the complete file data
 */
message StreamFileResponse {
  // The actual file bytes for this chunk
  bytes data = 1;

  // Which chunk number this is (0-indexed)
  uint32 chunk_number = 2;

  // Total size of the requested range (for progress tracking)
  uint64 total_size = 3;

  // Whether this is the final chunk
  bool is_final = 4;

  // Optional: byte offset of this chunk in the file
  uint64 chunk_offset = 5;
}

/**
 * File info for syncing into VFS
 */
message SyncFilesFile {
  uint64 item_id = 1;

  string file_url = 2;

  uint64 file_size = 3;

  string file_name = 4;
}

/**
 * Request to sync multiple files into the VFS
 */
message SyncFilesRequest {}

/**
 * Response after syncing files
 */
message SyncFilesResponse {
  // List of file URLs to sync
  repeated SyncFilesFile files = 1;
}

/**
 * Error details - sent if streaming fails
 * gRPC will automatically convert this to appropriate status codes
 */
message ErrorDetail {
  // Error code (HTTP-like)
  int32 code = 1;

  // Human-readable error message
  string message = 2;
}

/**
 * Catalog management command from daemon to server
 * Daemon uses this to subscribe/acknowledge catalog updates
 */
message WatchCatalogRequest {
  oneof command {
    // Subscribe to catalog updates - send on connection
    // Server responds with all future catalog changes
    SubscribeCommand subscribe = 1;

    // Acknowledge receipt of a catalog update
    // Helps server track which updates have been processed
    AckCommand ack = 2;
  }
}

/**
 * Subscribe command - sent by daemon to initiate catalog watching
 */
message SubscribeCommand {
  // Daemon instance ID (for tracking multiple connections)
  string daemon_id = 1;

  // Current catalog version (0 = send all files)
  // Server sends only updates newer than this version
  uint64 version = 2;
}

/**
 * Acknowledgment command - confirms daemon received an update
 */
message AckCommand {
  // The update_id being acknowledged
  uint64 update_id = 1;
}

/**
 * File entry in catalog
 */
message FileEntry {
  // Unique file ID
  uint64 id = 1;

  // File name as it appears in VFS
  string name = 2;

  // HTTP URL to stream from
  string url = 3;

  // File size in bytes
  uint64 size = 4;

  // MIME type (optional, can be inferred from file extension)
  string mime_type = 5;

  // Last modified timestamp (Unix seconds)
  int64 modified_time = 6;
}

/**
 * Catalog update - server pushes new/changed/removed files to daemon
 * Enables hot-loading of files without daemon restart
 */
message WatchCatalogResponse {
  // Unique update ID (for acknowledgment tracking)
  uint64 update_id = 1;

  // Update type
  UpdateType type = 2;

  // File being added/updated/removed
  repeated FileEntry files = 3;

  enum UpdateType {
    UPDATE_TYPE_UNSPECIFIED = 0;
    UPDATE_TYPE_ADD = 1;      // New file added to catalog
    UPDATE_TYPE_REMOVE = 2;   // File removed from catalog
    UPDATE_TYPE_UPDATE = 3;   // File metadata changed (size, URL, etc)
  }
}
